<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/truckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBoatButtonClick"
            android:text="@string/boat"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/modelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onObjectButtonClick"
            android:text="@string/objeto_3d"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onVideoButtonClick"
            android:text="@string/video"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:onClick="gpsLauncher"
        android:text="@string/gps" />

    <Button
        android:id="@+id/idButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button1"
        android:onClick="onIdButtonClick"
        android:text="@string/id_marker" />

    <Button
        android:id="@+id/markerlessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentEnd="true"
        android:onClick="onMarkerlessButtonClick"
        android:text="@string/markerless" />

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/markerlessButton"
        android:onClick="onPictureButtonClick"
        android:text="@string/picture" />

    <Button
        android:id="@+id/zoomIn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_marginStart="54dp"
        android:layout_toEndOf="@+id/idButton"
        android:onClick="zoomIn"
        android:text="@string/zoomIn" />

    <Button
        android:id="@+id/zoomOut"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_toEndOf="@+id/idButton"
        android:onClick="zoomOut"
        android:text="@string/zoomOut" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>